# MAI-ALGORITHMS

./: .gitignore  README.md
Pack-one/: CLI_1.c  CMakeLists.txt  Task_2.c
Pack-one/include/: modules.h  modules_lab_2.h
Pack-one/src/: modules.c  modules_lab_2.c
Pack-one/tests/: test.sh
